# Forge

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  forgefile.yaml  pyproject.toml  requirements.txt
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/agents/: page.tsx
dashboard/src/components/: agent-chat.tsx
docs/: quickstart.md
examples/coding_agent/: forgefile.yaml  run.py
examples/multi_agent/: forgefile.yaml
examples/quickstart/: README.md  hello_agent.py  hello_agent.yaml
examples/research_agent/: forgefile.yaml  run.py
forge/: __init__.py  config.py  exceptions.py
forge/api/: app.py  auth.py  security.py
forge/api/routes/: agents.py  health.py  models.py  sessions.py  tools.py
forge/api/ws/: stream.py
forge/cli/: main.py
forge/core/: events.py  parser.py  registry.py  runtime.py  types.py
forge/memory/: manager.py
forge/memory/backends/: chroma.py  sqlite.py
forge/models/: cost.py  router.py
forge/orchestration/: engine.py
forge/sdk/: agent.py  decorators.py
forge/tools/: executor.py  registry.py  schema.py
forge/tools/builtin/: __init__.py  file_ops.py  http_request.py  python_exec.py  shell.py  web_fetch.py  web_search.py
tests/unit/: test_parser.py  test_router.py  test_runtime.py  test_tools.py  test_types.py
