[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-ai"
version = "0.1.0"
description = "The universal AI agent runtime. Docker for agents."
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Tejas Naladala" }]
readme = "README.md"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.1",
    "httpx>=0.23.0,<0.28.0",
    "websockets==14.1",
    "click==8.1.7",
    "rich==13.9.4",
    "pyyaml==6.0.2",
    "jinja2==3.1.4",
    "litellm==1.55.8",
    "chromadb==0.5.23",
    "tiktoken==0.8.0",
    "aiosqlite==0.20.0",
    "sqlalchemy[asyncio]==2.0.36",
    "python-dotenv==1.0.1",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "structlog==24.4.0",
    "orjson==3.10.12",
    "watchfiles==1.0.3",
    "duckduckgo_search==7.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov",
    "ruff==0.8.4",
    "mypy",
]
all = [
    "openai",
    "anthropic",
    "google-generativeai",
    "redis",
]

[project.scripts]
forge = "forge.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
